fix: up nav z-index; change searchbar minlength

--- a/src/components/Movies/SearchBar/SearchBar.css
+++ b/src/components/Movies/SearchBar/SearchBar.css
@@ -21,7 +21,7 @@
 
 .searchbar__container {
   width: 100%;
-  margin: 70px 0 0 0;
+  margin: 70px 0 57px 0;
   border-radius: 9px;
   border: 1px solid rgba(253, 253, 253, 1);
   box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
@@ -33,7 +33,13 @@
 
 @media screen and (max-width: 1279px) {
   .searchbar__container {
-    margin: 80px 0 0 0;
+    margin: 80px 0 97px 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .searchbar__container {
+    margin-bottom: 0;
   }
 }
 
@@ -50,13 +56,34 @@
   }
 }
 
+.searchbar__input-container {
+  display: flex;
+  flex-direction: column;
+  margin: 19px auto 0 0;
+  width: 65%;
+  height: 53px;
+}
+
+@media screen and (max-width: 1279px) {
+  .searchbar__input-container {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .searchbar__input-container {
+    margin-left: 19px;
+    width: 60%;
+  }
+}
+
 .searchbar__input {
-  margin: 19px auto 19px 0;
+  width: 100%;
+  margin: 0;
   padding: 0;
   border: 0;
   color: #a0a0a0;
   height: 34px;
-  width: 65%;
   font-size: 18px;
   font-weight: 400;
   line-height: 20px;
@@ -64,40 +91,18 @@
   text-align: left;
 }
 
-@media screen and (max-width: 1279px) {
-  .searchbar__input {
-    width: 50%;
-  }
-}
-
 @media screen and (max-width: 767px) {
   .searchbar__input {
-    margin-left: 19px;
     font-size: 14px;
-    width: 60%;
   }
 }
 
 .searchbar__input-error {
   color: #ff4062;
-  height: 10px;
   font-size: 10px;
   font-weight: 400;
   letter-spacing: 0px;
-  align-self: flex-start;
-  margin: 10px auto 37px 20px;
-}
-
-@media screen and (max-width: 1279px) {
-  .searchbar__input-error {
-    margin-bottom: 77px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .searchbar__input-error {
-    margin-bottom: 0px;
-  }
+  margin: 1px auto auto 0;
 }
 
 .searchbar__button {
